--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "@angular/common": "^5.1.1",
-    "@angular/compiler": "5.0.3",
-    "@angular/compiler-cli": "5.0.3",
+    "@angular/compiler": "^5.1.1",
+    "@angular/compiler-cli": "^5.1.1",
     "@angular/core": "5.0.3",
     "@angular/forms": "5.0.3",
     "@angular/http": "5.0.3",
