--- a/package.json
+++ b/package.json
@@ -24,16 +24,17 @@
     "@ionic-native/splash-screen": "^4.5.2",
     "@ionic-native/status-bar": "^4.5.2",
     "@ionic/storage": "2.1.3",
+    "help": "^3.0.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "^5.5.5",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "sw-toolbox": "^3.6.0",
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.6",
     "ionic": "^3.19.0",
-    "typescript": "2.4.2"
+    "typescript": "^2.6.2"
   },
   "description": "An Ionic project"
 }
