--- a/package.json
+++ b/package.json
@@ -24,8 +24,14 @@
     "@ionic-native/splash-screen": "^4.5.2",
     "@ionic-native/status-bar": "^4.5.2",
     "@ionic/storage": "2.1.3",
+    "cordova-android": "^7.0.0",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-whitelist": "^1.3.1",
     "help": "^3.0.2",
     "ionic-angular": "3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "^5.5.5",
     "sw-toolbox": "^3.6.0",
@@ -36,5 +42,17 @@
     "ionic": "^3.19.0",
     "typescript": "^2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
