--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser": "^5.1.1",
     "@angular/platform-browser-dynamic": "^5.1.1",
     "@ionic-native/core": "^4.5.2",
+    "@ionic-native/native-storage": "^4.5.2",
     "@ionic-native/splash-screen": "^4.5.2",
     "@ionic-native/status-bar": "^4.5.2",
     "@ionic/storage": "2.1.3",
     "cordova-android": "^7.0.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-nativestorage": "^2.2.2",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "crypto-js": "^3.1.9-1",
@@ -50,7 +52,8 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-nativestorage": {}
     },
     "platforms": [
       "android"
