--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,7 @@ log.txt
 *.sublime-workspace
 .vscode/
 npm-debug.log*
-
 .idea/
-.sourcemaps/
 .sass-cache/
 .tmp/
 .versions/
@@ -23,13 +21,16 @@ node_modules/
 tmp/
 temp/
 hooks/
+.gradle/
+.sourcemaps/
+angular2-soap/
 platforms/
 plugins/
-plugins/android.json
-plugins/ios.json
 www/
 $RECYCLE.BIN/
-
 .DS_Store
 Thumbs.db
 UserInterfaceState.xcuserstate
+KNGKengineer.sublime-workspace
+KNGKengineer.sublime-project
+typings/cordova-typings.d.ts
