--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "sdtask",
-  "version": "0.0.1",
-  "author": "Zamulin D.V.",
+  "name": "kngk_engineer",
+  "version": "1.6.0",
   "homepage": "https://portal.kngk-group.ru/",
   "private": true,
   "scripts": {
@@ -12,50 +11,69 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "^5.1.1",
-    "@angular/compiler": "^5.1.1",
-    "@angular/compiler-cli": "^5.1.1",
-    "@angular/core": "^5.1.1",
-    "@angular/forms": "^5.1.1",
-    "@angular/http": "^5.1.1",
-    "@angular/platform-browser": "^5.1.1",
-    "@angular/platform-browser-dynamic": "^5.1.1",
-    "@ionic-native/core": "^4.5.2",
-    "@ionic-native/native-storage": "^4.5.2",
-    "@ionic-native/splash-screen": "^4.5.2",
-    "@ionic-native/status-bar": "^4.5.2",
-    "@ionic/storage": "2.1.3",
-    "cordova-android": "^7.0.0",
-    "cordova-plugin-device": "^1.1.7",
-    "cordova-plugin-ionic-webview": "^1.1.16",
-    "cordova-plugin-nativestorage": "^2.2.2",
-    "cordova-plugin-splashscreen": "^4.1.0",
+    "@angular/common": "^6.0.1",
+    "@angular/compiler": "^6.0.1",
+    "@angular/compiler-cli": "^6.0.1",
+    "@angular/core": "^6.0.1",
+    "@angular/forms": "^6.0.1",
+    "@angular/http": "^6.0.1",
+    "@angular/platform-browser": "^6.0.1",
+    "@angular/platform-browser-dynamic": "^6.0.1",
+    "@angular/tsc-wrapped": "^4.4.6",
+    "@ionic-native/core": "^4.7.0",
+    "@ionic-native/file": "^4.7.0",
+    "@ionic-native/http": "^4.7.0",
+    "@ionic-native/native-storage": "^4.7.0",
+    "@ionic-native/splash-screen": "^4.7.0",
+    "@ionic-native/status-bar": "^4.7.0",
+    "@ionic/storage": "^2.1.3",
+    "cordova": "^8.0.0",
+    "cordova-android": "^7.1.0",
+    "cordova-ios": "^4.5.4",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-console": "^1.1.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-http": "^1.2.0",
+    "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-nativestorage": "^2.3.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "crypto-js": "^3.1.9-1",
     "help": "^3.0.2",
-    "ionic-angular": "3.9.2",
+    "ionic-angular": "^3.9.2",
+    "ionic-native": "^2.9.0",
     "ionic-plugin-keyboard": "^2.2.1",
-    "ionicons": "3.0.0",
-    "rxjs": "^5.5.5",
+    "ionicons": "^4.0.0",
+    "moment": "^2.22.1",
+    "rxjs": "^6.1.0",
     "sw-toolbox": "^3.6.0",
-    "zone.js": "^0.8.18"
+    "xml2js": "^0.4.19",
+    "xmlbuilder": "^10.0.0",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.6",
-    "ionic": "^3.19.0",
-    "typescript": "^2.6.2"
+    "@ionic/app-scripts": "^3.1.9",
+    "ionic": "^3.20.0",
+    "tslint-config-prettier": "^1.12.0",
+    "typescript": "^2.8.3"
   },
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "ionic-plugin-keyboard": {},
-      "cordova-plugin-whitelist": {},
+      "cordova-plugin-console": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-nativestorage": {}
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-nativestorage": {},
+      "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
+      "ios",
       "android"
     ]
   }
